--- a/HEmain.css
+++ b/HEmain.css
@@ -74,3 +74,10 @@ input {
     font-size: 8px;
     margin: 5px 2px 0px 5px;
 }
+
+div {
+    color: #696969;
+    margin-left: 10px;
+    font-size: 10px;
+    margin-top: 0px;
+}
